--- a/_config.yml
+++ b/_config.yml
@@ -295,7 +295,18 @@ defaults:
       author_profile: false
       read_time: false
       sidebar:
-        nav: "pythontutor"
+        nav: "pythontutor1"
+
+  - scope:
+      path: "doc/tutorial/python/level2"
+      type: pages
+    values:
+      layout: single
+      toc: true
+      author_profile: false
+      read_time: false
+      sidebar:
+        nav: "pythontutor2"
 
   - scope:
       path: "doc/tutorial/selenium"
